# fastapi-wake-on-lan

./: .gitignore  Dockerfile  README.md  build.ps1  dev.ps1  language.py  main.py  pyproject.toml  requirements.txt
database/: __init__.py  ctl.py  models.py
static/: index.html  main.css  main.js
templates/: index.html
utils/: __init__.py  __ping.py
